--- a/prologin/team/templates/team/index.html
+++ b/prologin/team/templates/team/index.html
@@ -1,33 +1,28 @@
 {% extends "prologin/base.html" %}
-
+{% load static %}
 {% block title %} – L'équipe {{ year }}{% endblock %}
 
 {% block content %}
-<div class="btn-toolbar" style="text-align: center">
-<div class="btn-group">
-{% for team in timeline %}
-	<a class="{% if team.year == year %}btn active{% else %}btn{% endif %}" href="/team/{{ team.year }}">{{ team.year }}</a>
-{% endfor %}
-</div>
+<div id="team-select-year">
+  <div class="btn-group" id="team-select-year">
+    {% for team in timeline %}
+    <a class="btn{% if team.year == year %} active{% endif %}" href="/team/{{ team.year }}">{{ team.year }}</a>
+    {% endfor %}
+  </div>
 </div>
 <header class="page-header">
-<h1>L'équipe {{ year }}</h1>
+  <h1>L'équipe {{ year }}</h1>
 </header>
-<div class="row-fluid">
-{% for member in team %}
-	<div class="span3 well" style="text-align: right; height: 160px; width: 19%">
-		<div style="float: right; margin-left: 10px; text-align: center;">
-			<img src="/static/team/{{ member.pic }}.jpg" /><br />
-			
-		<span class="label {% if member.role.rank <= 4 %}label-important{% else %}label-success{% endif %}">{{ member.role }}</span><br />
-		</div>
-		<strong>{{ member.user.first_name }} {{ member.user.last_name }}</strong><br />
-		<span style="display: block; width: 50%; text-align: right">{{ member.user.username }}</span>
-	</div>
-	{% if forloop.counter|divisibleby:4 %}
-	</div>
-	<div class="row-fluid">
-	{% endif %}
-{% endfor %}
-</div>
+<ul class="thumbnails">
+  {% for member in team %}
+  <li class="span3 team-member thumbnail">
+    <img src="{% static 'team/'|add:member.pic|add:".jpg" %}" alt="">
+    <div class="caption">
+      <span class="label {% if member.role.rank <= 4 %}label-important{% else %}label-success{% endif %}">{{ member.role }}</span>
+      <h3>{{ member.user.username }}</h3>
+      <h3>{{ member.user.first_name }} {{ member.user.last_name }}</h3>
+    </div>
+  </li>
+  {% endfor %}
+</ul>
 {% endblock %}
