breadcrumbs supports for ulinked inactive elements

--- a/prologin/news/templates/news/detail.html
+++ b/prologin/news/templates/news/detail.html
@@ -4,7 +4,7 @@
 {% load breadcrumbs %}
 {% block breadcrumbs %}
 {% breadcrumb Accueil home %}
-{% breadcrumb "Nouvelles" %}
+{% breadcrumb "Nouvelles" "none" %}
 {% breadcrumb news.title %}
 {% endblock %}
 
