--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -57,6 +57,8 @@
 	  <p id="footer">Prologin, le Concours National d'Informatique</p>
 	</div>
 	<div class="span2">
+	  {% include "prologin/social.html" %}
+	  <h2>Nos partenaires</h2>
 	  <ul id="sponsors-lst">
 	    <li>Sponsor 1</li>
 	    <li>Sponsor 2</li>
