--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -34,9 +34,7 @@
 	    </div>
 	    <div id="breadcrumbs">
 	      <ul class="breadcrumb">
-		{% block breadcrumbs %}
-		{% breadcrumb Accueil %}
-		{% endblock %}
+		{% block breadcrumbs %}{% endblock %}
 	      </ul>
 	    </div>
 	  </div>
