--- a/prologin/prologin/templates/prologin/social.html
+++ b/prologin/prologin/templates/prologin/social.html
@@ -4,7 +4,7 @@
 <div class="social-bar">
   <a href="http://www.facebook.com/prologin" target="_blank"><img src="{% static 'social/facebook.png' %}" alt="facebook"></a>
   <a href="http://twitter.com/prologin" target="_blank"><img src="{% static 'social/twitter.png' %}" alt="twitter"></a>
-  <a href="{% url 'news:rss' %}"><img src="{% static 'social/rss.png' %}" alt="rss"></a>
+  <a href="{% url 'news:rss' %}" target="_blank"><img src="{% static 'social/rss.png' %}" alt="rss"></a>
 </div>
 
 <div class="social-bar">
