--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -53,7 +53,7 @@
       <!-- Left column -->
       <div class="col-lg-2">
 	{% include "prologin/navigation.html" %}
-	{% include "prologin/latest_news.html" %}
+	{% include "news/latest.html" %}
       </div>
 
       <!-- Middle column -->
