implementing menu depth

--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -54,7 +54,7 @@
       <!-- Left column -->
       <div class="col-lg-2">
 	<h2>Navigation</h2>
-	{% block menu %}{% menu %}{% endblock %}
+	{% block menu %}{% menu l_association %}{% endblock %}
 	{% comment %}
 	{% include "prologin/navigation.html" %}
 	{% endcomment %}
