users login/logout

--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -53,6 +53,7 @@
       <!-- Left column -->
       <div class="col-lg-2">
 	{% include "prologin/navigation.html" %}
+	{% include "users/auth_form.html" %}
 	{% include "news/latest.html" %}
       </div>
 
