--- a/prologin/users/templates/users/profile.html
+++ b/prologin/users/templates/users/profile.html
@@ -10,5 +10,7 @@
 
 {% block content %}
 <h1>{{ profile.user.username }}</h1>
+<div>
+  <img src="{% url 'users:avatar_scale' profile.short_name 'medium' %}" alt="">
+</div>
 {% endblock %}
-
