closing ticket #2 : default avatars implemented

--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    {% load staticfiles %}
+    {% load static %}
     {% load breadcrumbs %}
     {% load root_url %}
     {% load menu_display %}
