removing the "home" highlight when not on the home

--- a/prologin/news/templates/news/index.html
+++ b/prologin/news/templates/news/index.html
@@ -1,4 +1,7 @@
 {% extends "prologin/base.html" %}
+{% load menu_display %}
+
+{% block menu %}{% menu accueil %}{% endblock %}
 
 {% block content %}
 <h1>Accueil</h1>
