--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -55,7 +55,7 @@
       <!-- Left column -->
       <div class="col-lg-2">
 	<h2 id="menu-title">Navigation</h2>
-	{% block menu %}{% menu accueil %}{% endblock %}
+	{% block menu %}{% menu %}{% endblock %}
 	{% include "users/auth_form.html" %}
 	{% include "news/latest.html" %}
       </div>
