--- a/prologin/pages/templates/pages/detail.html
+++ b/prologin/pages/templates/pages/detail.html
@@ -1,7 +1,9 @@
 {% extends "prologin/base.html" %}
+{% load breadcrumbs %}
+{% load markdown %}
+
 {% block title %} – {{ page.name }}{% endblock %}
 
-{% load breadcrumbs %}
 {% block breadcrumbs %}
 {% breadcrumb Accueil home %}
 {% breadcrumb page.name %}
@@ -10,6 +12,6 @@
 {% block content %}
 <h1>{{ page.name }}</h1>
 <div>
-  {{ page.content }}
+  {% autoescape off %}{% markdown page.content %}{% endautoescape %}
 </div>
 {% endblock %}
