team breadcrumb fix

--- a/prologin/team/templates/team/index.html
+++ b/prologin/team/templates/team/index.html
@@ -9,6 +9,7 @@
 {% load breadcrumbs %}
 {% block breadcrumbs %}
 {% breadcrumb Accueil home %}
+{% breadcrumb Prologin %}
 {% breadcrumb "L'équipe" team:index %}
 {% breadcrumb year %}
 {% endblock %}
