--- a/prologin/prologin/static/prologin.css
+++ b/prologin/prologin/static/prologin.css
@@ -110,7 +110,7 @@ html, body {
  * Left column
  */
 
-#menu-title {
+#menu-title, #login-title {
     margin-bottom: 0;
     padding: 5px;
     background-color: #202b66;
@@ -120,8 +120,12 @@ html, body {
     color: #fff;
 }
 
-#main-menu {
+#main-menu, #login-wrapper {
     border: 1px solid #202b66;
+}
+
+#login-wrapper {
+    padding: 10px;
 }
 
 #main-menu, #main-menu ul {
