--- a/prologin/users/templates/users/auth_form.html
+++ b/prologin/users/templates/users/auth_form.html
@@ -1,15 +1,21 @@
 {% if not user.is_authenticated %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+<h2 id="login-title">Authentification</h2>
 
-<form method="post" action="{% url 'users:django.contrib.auth.views.login' %}">
-  {% csrf_token %}
-  <input type="hidden" name="next" value="{% if request.get_full_path != '/users/login/' %}{{ request.get_full_path }}{% else %}/{% endif %}" />
-  <input maxlength="254" name="username" type="text" placeholder="Nom d'utilisateur"><br>
-  <input name="password" type="password" placeholder="Mot de passe"><br>
-  <input type="submit" value="Se connecter" />
-</form>
+<div id="login-wrapper">
+  {% if form.errors %}
+  <p>Your username and password didn't match. Please try again.</p>
+  {% endif %}
+
+  <form method="post" action="{% url 'users:django.contrib.auth.views.login' %}">
+    {% csrf_token %}
+    <input type="hidden" name="next" value="{% if request.get_full_path != '/users/login/' %}{{ request.get_full_path }}{% else %}/{% endif %}" />
+    <input maxlength="254" name="username" type="text" placeholder="Nom d'utilisateur"><br>
+    <input name="password" type="password" placeholder="Mot de passe"><br>
+    <input type="submit" value="Se connecter" /><br>
+    <a href="{% url 'users:register' %}">Créer un compte</a><br>
+    <a href="#">Mot de passe oublié</a>
+  </form>
+</div>
 
 {% endif %}
