closing issue #1: user registration

--- a/prologin/users/templates/users/profile.html
+++ b/prologin/users/templates/users/profile.html
@@ -18,6 +18,7 @@
 {% block content %}
 <h1>{{ profile.user.username }}</h1>
 <div>
+  </pre>
   <div>
     <img src="{% static 'users/avatars/'|add:profile.slug|add:'/'|add:profile.slug|add:'_medium.png' %}" alt="{{ profile.user.username }}" title="{{ profile.user.username }}">
   </div>
