serving media files

--- a/prologin/team/templates/team/index.html
+++ b/prologin/team/templates/team/index.html
@@ -31,7 +31,7 @@
   {% for member in team %}
   <div class="col-lg-3 team-member">
     <div>
-      <img src="{% static 'users/avatars/'|add:member.profile.slug|add:'/'|add:member.profile.slug|add:'_medium.png' %}" alt="{{ member.profile.user.username }}" title="{{ member.profile.user.username }}">
+      <img src="/media/avatars/{{ member.profile.slug }}/{{ member.profile.slug }}_medium.png" alt="{{ member.profile.user.username }}" title="{{ member.profile.user.username }}">
       <div>
 	<span class="label {% if member.role.rank <= 10 %}label-danger{% else %}label-success{% endif %}">{{ member.role }}</span>
 	<h3><a href="{% url 'users:profile' member.profile.slug %}">{{ member.profile.user.username }}</a></h3>
