--- a/prologin/team/templates/team/index.html
+++ b/prologin/team/templates/team/index.html
@@ -1,18 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load static %}
-{% load menu_display %}
 
-{% block title %} – L'équipe {{ year }}{% endblock %}
-
-{% block menu %}{% menu prologin lequipe %}{% endblock %}
-
-{% load breadcrumbs %}
-{% block breadcrumbs %}
-{% breadcrumb Accueil home %}
-{% breadcrumb Prologin %}
-{% breadcrumb "L'équipe" team:index %}
-{% breadcrumb year %}
-{% endblock %}
+{% block title %}L'équipe {{ year }}{% endblock %}
 
 {% block content %}
 <div id="team-select-year" class="navbar">
@@ -29,13 +17,12 @@
 
 <div class="row">
   {% for member in team %}
-  <div class="col-lg-3 team-member">
+  <div class="col-md-3 team-member">
     <div>
-      <img src="/media/avatars/{{ member.profile.slug }}/{{ member.profile.slug }}_medium.png" alt="{{ member.profile.user.username }}" title="{{ member.profile.user.username }}">
       <div>
 	<span class="label {% if member.role.rank <= 10 %}label-danger{% else %}label-success{% endif %}">{{ member.role }}</span>
-	<h3><a href="{% url 'users:profile' member.profile.slug %}">{{ member.profile.user.username }}</a></h3>
-	<h3>{{ member.profile.user.first_name }} {{ member.profile.user.last_name }}</h3>
+	<h3>{{ member.user.username }}</h3>
+	<h3>{{ member.user.first_name }} {{ member.user.last_name }}</h3>
       </div>
     </div>
   </div>
