--- a/prologin/users/templates/users/profile.html
+++ b/prologin/users/templates/users/profile.html
@@ -1,50 +1,33 @@
 {% extends "prologin/base.html" %}
-{% load menu_display %}
-{% load breadcrumbs %}
-{% load static %}
 
-{% block title %}{{ profile.user.username }}{% endblock %}
-
-{% block menu %}
-{% if profile.user.id == request.user.id %}{% menu mon_compte %}{% else %}{% menu %}{% endif %}
-{% endblock %}
-
-{% block breadcrumbs %}
-{% breadcrumb Accueil home %}
-{% breadcrumb Utilisateur %}
-{% breadcrumb profile.user.username %}
-{% endblock %}
+{% block title %}{{ usr.username }}{% endblock %}
 
 {% block content %}
-<h1>{{ profile.user.username }}</h1>
+<h1>{{ usr.username }}</h1>
 <div>
-  <div>
-    <img src="/media/avatars/{{ profile.slug}}/{{ profile.slug}}_medium.png" alt="{{ profile.user.username }}" title="{{ profile.user.username }}">
-  </div>
-
-  {% if request.user.is_staff %}
+  {% if user.is_staff %}
   <dl>
     <dt>Nom :</dt>
-    <dd>{{ profile.user.last_name }}</dd>
+    <dd>{{ usr.last_name }}</dd>
 
     <dt>Prénom :</dt>
-    <dd>{{ profile.user.first_name }}</dd>
+    <dd>{{ usr.first_name }}</dd>
 
     <dt>Téléphone :</dt>
-    <dd>{{ profile.phone_number }}</dd>
+    <dd>{{ usr.profile.phone_number }}</dd>
 
     <dt>Email :</dt>
-    <dd>{{ profile.user.email }}</dd>
+    <dd>{{ usr.email }}</dd>
 
     <dt>Date de naissance :</dt>
-    <dd>{% if profile.birthday %}{{ profile.birthday }} ({{ profile.birthday|timesince }}){% endif %}</dd>
+    <dd>{% if usr.profile.birthday %}{{ usr.profile.birthday }} ({{ usr.profile.birthday|timesince }}){% endif %}</dd>
 
     <dt>Adresse :</dt>
     <dd>
       <address>
-	{{ profile.address }}<br>
-	{{ profile.postal_code }} {{ profile.city }}<br>
-	{{ profile.country }}
+	{{ usr.profile.address }}<br>
+	{{ usr.profile.postal_code }} {{ usr.profile.city }}<br>
+	{{ usr.profile.country }}
       </address>
       </dd>
   </dl>
