displaying django messages

--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -45,6 +45,7 @@
 
       <!-- Middle column -->
       <div id="content-block" class="col-lg-8">
+	{% include 'prologin/messages.html' %}
 	<div>
 	  {% block content %}<li></li>{% endblock %}
 	</div>
